Added header and cross origin handling parameters.