@@ -1,7 +1,6 @@
 package com.codehacks.blog.config;
 
 import com.codehacks.blog.model.Role;
-import com.codehacks.blog.util.Constants;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -16,6 +15,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -26,6 +26,11 @@ public class SecurityConfig {
         http
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .csrf(AbstractHttpConfigurer::disable)
+                .headers(headers -> {
+                    headers.frameOptions(frame -> frame.deny());
+                    headers.xssProtection(xss -> xss.disable());
+                    headers.contentSecurityPolicy(csp -> csp.policyDirectives("default-src 'self'"));
+                })
                 .sessionManagement(session ->
                         session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .exceptionHandling(exceptions -> exceptions
@@ -36,12 +41,11 @@ public class SecurityConfig {
                         })
                 )
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/swagger-ui/**", "/api-docs/**").permitAll()
-                        .requestMatchers("/api/v1/blog/**").permitAll()
-                        .requestMatchers("/api/v1/auth/register").permitAll()
+                        .requestMatchers("/swagger-ui/**", "/api-docs/**", "/api/v1/blog/**", "/api/v1/auth/register").permitAll()
                         .requestMatchers("/api/v1/auth/login", "/api/v1/auth/change-password", "/api/v1/auth/logout")
                             .hasAnyRole(Role.USER.name(), Role.SUBSCRIBER.name(), Role.ADMIN.name())
-                        .requestMatchers("/api/v1/auth/delete-account", "/api/v1/auth/change-role").hasAnyRole(Role.ADMIN.name(), Role.SUBSCRIBER.name())
+                        .requestMatchers("/api/v1/auth/delete-account", "/api/v1/auth/change-role")
+                            .hasAnyRole(Role.ADMIN.name(), Role.SUBSCRIBER.name())
                         .anyRequest().authenticated());
 
         return http.build();
@@ -50,15 +54,15 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:4200"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
-        configuration.setExposedHeaders(Arrays.asList("Authorization"));
+        configuration.setAllowedOrigins(List.of("http://localhost:4200"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE"));
+        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type"));
+        configuration.setExposedHeaders(List.of("Authorization"));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration(Constants.AUTH_PATH + "/**", configuration);
+        source.registerCorsConfiguration(  "api/v1/**", configuration);
         return source;
     }
 }
